--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,7 @@
                             <div class="profile_menu_dotdotdot vertical_array">
                                 <!--                                <button class="my-modal-active-btn" id="my-modal-active-btn">-->
                                     <div style="height: 24px; width: 24px;" class="my-modal-active-btn"
-                                         id="my-modal-active-btn">
+                                         id="my-modal-active-btn_1">
                                         <svg aria-label="옵션 더 보기" color="#262626" fill="#262626" height="24" role="img"
                                              viewBox="0 0 24 24" width="24">
                                             <circle cx="12" cy="12" r="1.5"></circle>
@@ -344,6 +344,50 @@
 </main>
 
 
+<!--modal-->
+<div class="my-modal-bg" id="my-modal-bg">
+    <div class="my-modal-case" id="my-modal-case">
+        <div class="my-modal" id="my-modal">
+            <button class="my-modal-btn btn1">신고</button>
+            <button class="my-modal-btn btn2">팔로우 취소</button>
+            <button class="my-modal-btn btn3">게시물로 이동</button>
+            <button class="my-modal-btn btn4">공유 대상...</button>
+            <button class="my-modal-btn btn5">링크 복사</button>
+            <button class="my-modal-btn btn6">퍼가기</button>
+            <button class="my-modal-btn btn7 modal_cancel_btn7" id="modal_cancel_btn7">취소</button>
+        </div>
+
+    </div>
+</div>
+
+<script>
+
+    // ...버튼 누르면 모달창 켜짐
+const modal = document.getElementById("my-modal-bg");
+const btnModal = document.getElementById("my-modal-active-btn_1");
+btnModal.addEventListener("click", e => {
+    modal.style.display = "flex"
+});
+// 모달 메뉴에서 취소버튼 누르면 꺼짐
+const closeBtn = modal.querySelector(".modal_cancel_btn7")
+closeBtn.addEventListener("click", e => {
+    modal.style.display = "none"
+})
+// 모달창 밖의 회색영역 클릭하면 모달 꺼짐
+modal.addEventListener("click", e => {
+    const evTarget = e.target
+    if(evTarget.classList.contains("my-modal-bg")) {
+        modal.style.display = "none"
+    }
+})
+
+// esc누르면 모달 꺼짐
+window.addEventListener("keyup", e => {
+    if(modal.style.display === "flex" && e.key === "Escape") {
+        modal.style.display = "none"
+    }
+})
+</script>
 
 
 
