--- a/static/style.css
+++ b/static/style.css
@@ -5,8 +5,13 @@ div, nav, main, section, footer{
     position: relative;
     box-sizing: border-box;
     flex-shrink: 0;
-
 }
+
+a{
+        text-decoration: none;
+}
+a:hover { text-decoration:none !important }
+
 
 .vertical_array{
     flex-direction: column;
@@ -403,7 +408,7 @@ footer {
     align-content: space-around;
 }
 #profile_id_id{
-
+    color: rgba(var(--i1d,38,38,38),1);
 }
 
 #profile_name_name{
@@ -510,9 +515,7 @@ footer {
 #post-btn-1{
     cursor: pointer;
 }
-#aaaa{
-    cursor: pointer;
-}
+
 
 
 /*modal===================================*/
@@ -532,12 +535,6 @@ footer {
     z-index: 100;
     transition: opacity 0.5s;
 }
-
-/*.bg-active{*/
-/*    visibility: visible;*/
-/*    opacity: 1;*/
-/*    !*display: flex;*!*/
-/*}*/
 
 #my-modal-active-btn_1{
     cursor: pointer;
@@ -599,7 +596,9 @@ footer {
 }
 
 
-
+.no-scroll{
+    overflow: hidden;
+}
 
 
 
