--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
                     </a>
                 </div>
                 <div class="nav_icons">
-                    <a href="">
+                    <a href="https://www.instagram.com/sg_marco_la/">
                         <img class="nav_icons circle_img" id="profile_small" alt="sg_marco_la님의 프로필 사진" crossorigin="anonymous"
                              data-testid="user-avatar" draggable="false"
                              src="https://i0.wp.com/crackwizard.net/wp-content/uploads/2021/02/Disk-Drill-Pro-Crack-License-Key-Updated-Full-Free-Download.png?fit=256%2C256&ssl=1"
@@ -299,13 +299,15 @@
                 <footer class="font_basic_font">
                     <div id="my_profile_box" class="">
                         <div id="my_profile_box_1">
-                            <a href="#">
+                            <a href="https://www.instagram.com/sg_marco_la/">
                                 <img class="circle_img big_size_img" src="https://i0.wp.com/crackwizard.net/wp-content/uploads/2021/02/Disk-Drill-Pro-Crack-License-Key-Updated-Full-Free-Download.png?fit=256%2C256&ssl=1" alt="프로필 이미지">
                             </a>
 
                         </div>
-                        <div id="profile_id_name" class="vertical_array">
-                            <div id="profile_id_id">sg_marco_la</div>
+                        <div id="profile_id_name" class="vertical_array ">
+                            <a href="https://www.instagram.com/sg_marco_la/" >
+                                <div id="profile_id_id">sg_marco_la</div>
+                            </a>
                             <div id="profile_name_name">나성근</div>
                         </div>
                         <div id="account_change_div">
@@ -366,18 +368,22 @@
 const modal = document.getElementById("my-modal-bg");
 const btnModal = document.getElementById("my-modal-active-btn_1");
 btnModal.addEventListener("click", e => {
-    modal.style.display = "flex"
+    modal.style.display = "flex";
+    document.querySelector('body').classList.add('no-scroll');
 });
 // 모달 메뉴에서 취소버튼 누르면 꺼짐
 const closeBtn = modal.querySelector(".modal_cancel_btn7")
 closeBtn.addEventListener("click", e => {
     modal.style.display = "none"
+    document.querySelector('body').classList.remove('no-scroll');
 })
 // 모달창 밖의 회색영역 클릭하면 모달 꺼짐
 modal.addEventListener("click", e => {
     const evTarget = e.target
     if(evTarget.classList.contains("my-modal-bg")) {
         modal.style.display = "none"
+        document.querySelector('body').classList.remove('no-scroll');
+
     }
 })
 
@@ -385,6 +391,7 @@ modal.addEventListener("click", e => {
 window.addEventListener("keyup", e => {
     if(modal.style.display === "flex" && e.key === "Escape") {
         modal.style.display = "none"
+        document.querySelector('body').classList.remove('no-scroll');
     }
 })
 </script>
