포스팅 복붙으로 3개. 모달창은 3개 모두 작동. 포스팅 본문글 말줄임표까지

--- a/static/style.css
+++ b/static/style.css
@@ -135,7 +135,7 @@ main {
 
 .post_post{
     max-width: 614px;
-    margin: 0;
+    margin-bottom: 30px;
     padding: 0;
     justify-content: flex-start;
     border: 1px solid #dbdbdb;
@@ -300,8 +300,18 @@ main {
 }
 
 .content_content{
+    display: block;
+    width: 400px;
     margin-left: 10px;
     font-weight: 400;
+     text-align: left;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-wrap: break-word;
+    /*display: -webkit-box;*/
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 
