일단 마무리

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.88.1">
-    <title>Carousel Template · Bootstrap v5.1</title>
+    <title>INSTAGRAM CLONE</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/carousel/">
 
@@ -696,49 +696,10 @@
 
 <script src="insta_clone_1_1.js">
 
-//     // ...버튼 누르면 모달창 켜짐
-// const modal = document.getElementById("my-modal-bg");
-// const btnModal_1 = document.getElementById("my-modal-active-btn_1");
-// const btnModal_2 = document.getElementById("my-modal-active-btn_2");
-// const btnModal_3 = document.getElementById("my-modal-active-btn_3");
-//
-// btnModal_1.addEventListener("click", e => {
-//     modal.style.display = "flex";
-//     document.querySelector('body').classList.add('no-scroll');
-// });
-// btnModal_2.addEventListener("click", e => {
-//     modal.style.display = "flex";
-//     document.querySelector('body').classList.add('no-scroll');
-// });
-// btnModal_3.addEventListener("click", e => {
-//     modal.style.display = "flex";
-//     document.querySelector('body').classList.add('no-scroll');
-// });
-//
-// // 모달 메뉴에서 취소버튼 누르면 꺼짐
-// const closeBtn = modal.querySelector(".modal_cancel_btn7")
-// closeBtn.addEventListener("click", e => {
-//     modal.style.display = "none"
-//     document.querySelector('body').classList.remove('no-scroll');
-// })
-// // 모달창 밖의 회색영역 클릭하면 모달 꺼짐
-// modal.addEventListener("click", e => {
-//     const evTarget = e.target
-//     if(evTarget.classList.contains("my-modal-bg")) {
-//         modal.style.display = "none"
-//         document.querySelector('body').classList.remove('no-scroll');
-//
-//     }
-// })
-//
-// // esc누르면 모달 꺼짐
-// window.addEventListener("keyup", e => {
-//     if(modal.style.display === "flex" && e.key === "Escape") {
-//         modal.style.display = "none"
-//         document.querySelector('body').classList.remove('no-scroll');
-//     }
-// })
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 
 
